[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://images/bg2.png" type="Texture" id=3]
[ext_resource path="res://Controls.gd" type="Script" id=4]
[ext_resource path="res://Spinner.gd" type="Script" id=5]
[ext_resource path="res://images/loading.png" type="Texture" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.254902 )

[node name="Scryfall" type="HTTPRequest" parent="."]

[node name="CardDownload" type="HTTPRequest" parent="."]

[node name="Controls" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.5
margin_top = -225.5
margin_right = 296.5
margin_bottom = 225.5
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.137255, 0.137255, 0.784314 )

[node name="GetCard" type="Button" parent="Controls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 86.5
margin_top = -177.5
margin_right = 171.5
margin_bottom = -152.5
text = "Get Card"

[node name="Grid" type="GridContainer" parent="Controls"]
margin_left = 22.0
margin_top = 64.0
margin_right = 235.0
margin_bottom = 225.0
custom_constants/vseparation = 20
custom_constants/hseparation = 8
columns = 2

[node name="ManaLabel" type="Label" parent="Controls/Grid"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Mana Value"
align = 2
valign = 1

[node name="ManaControls" type="HBoxContainer" parent="Controls/Grid"]
margin_left = 81.0
margin_right = 215.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="CheckButton" type="CheckBox" parent="Controls/Grid/ManaControls"]
margin_right = 52.0
margin_bottom = 24.0
pressed = true
text = "Any"

[node name="ManaValue" type="SpinBox" parent="Controls/Grid/ManaControls"]
margin_left = 60.0
margin_right = 134.0
margin_bottom = 24.0
size_flags_vertical = 4
max_value = 16.0
editable = false

[node name="ColorLabel" type="Label" parent="Controls/Grid"]
margin_top = 47.0
margin_right = 73.0
margin_bottom = 61.0
text = "Color"
align = 2

[node name="Color" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 44.0
margin_right = 215.0
margin_bottom = 64.0
size_flags_vertical = 4
text = "Color"

[node name="TypeLabel" type="Label" parent="Controls/Grid"]
margin_top = 87.0
margin_right = 73.0
margin_bottom = 101.0
text = "Card Type"
align = 2
valign = 1

[node name="Type" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 84.0
margin_right = 215.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Type"

[node name="RarityLabel" type="Label" parent="Controls/Grid"]
margin_top = 127.0
margin_right = 73.0
margin_bottom = 141.0
text = "Rarity"
align = 2
valign = 1

[node name="Rarity" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 124.0
margin_right = 215.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Rarity"

[node name="SetContainer" type="VBoxContainer" parent="Controls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -178.5
margin_right = -16.0
margin_bottom = 194.5

[node name="SetLabel" type="Label" parent="Controls/SetContainer"]
margin_right = 324.0
margin_bottom = 14.0
text = "Set"
align = 1

[node name="SetList" type="ItemList" parent="Controls/SetContainer"]
margin_top = 18.0
margin_right = 324.0
margin_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true

[node name="Title" type="Label" parent="Controls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_top = 19.0
margin_right = 98.5
margin_bottom = 33.0
text = "Trailblazer Card Generator"
align = 1

[node name="Fail" type="Label" parent="Controls"]
visible = false
margin_left = 26.5
margin_top = 309.5
margin_right = 234.5
margin_bottom = 357.5
custom_colors/font_color = Color( 1, 0.403922, 0.403922, 1 )
text = "Failed to find a card with the specified parameters"
align = 1
autowrap = true

[node name="CardHistoryToggle" type="CheckButton" parent="Controls"]
margin_left = 41.5
margin_top = 368.5
margin_right = 236.5
margin_bottom = 408.5
pressed = true
text = "Show Card History"

[node name="CardHistory" type="TextEdit" parent="Controls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 24.5
margin_top = -300.0
margin_right = 215.5
margin_bottom = 300.0
readonly = true
show_line_numbers = true

[node name="ClearHistory" type="Button" parent="Controls"]
margin_left = 84.5
margin_top = 408.5
margin_right = 178.5
margin_bottom = 428.5
text = "Clear History"

[node name="CardSelection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CardPos1" type="Position2D" parent="CardSelection"]
position = Vector2( 170, 300 )

[node name="CardPos2" type="Position2D" parent="CardSelection"]
position = Vector2( 512, 300 )

[node name="CardPos3" type="Position2D" parent="CardSelection"]
position = Vector2( 852, 300 )

[node name="Take1" type="Button" parent="CardSelection"]
visible = false
margin_left = 134.0
margin_top = 496.0
margin_right = 207.0
margin_bottom = 516.0
text = "Take Card"

[node name="Take2" type="Button" parent="CardSelection"]
visible = false
margin_left = 475.0
margin_top = 496.0
margin_right = 548.0
margin_bottom = 516.0
text = "Take Card"

[node name="Take3" type="Button" parent="CardSelection"]
visible = false
margin_left = 816.0
margin_top = 496.0
margin_right = 889.0
margin_bottom = 516.0
text = "Take Card"

[node name="Spinner" type="Sprite" parent="."]
visible = false
position = Vector2( 409, 362 )
scale = Vector2( 0.163125, 0.163125 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[connection signal="pressed" from="Controls/GetCard" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Controls/Grid/ManaControls/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Controls/Grid/ManaControls/CheckButton" to="Controls" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Controls/CardHistoryToggle" to="." method="_on_CardHistoryToggle_toggled"]
[connection signal="pressed" from="Controls/ClearHistory" to="." method="_on_ClearHistory_pressed"]
[connection signal="pressed" from="CardSelection/Take1" to="." method="_on_Take1_pressed"]
[connection signal="pressed" from="CardSelection/Take2" to="." method="_on_Take2_pressed"]
[connection signal="pressed" from="CardSelection/Take3" to="." method="_on_Take3_pressed"]
